config.json: updated logo in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
     "base_font": "fraunces",
     "header": {
         "title": "Agency",
-        "logo": "images/logo.svg",
+        "logo": "images/TWINSIS_VINTAGE_card_90x50mm_1_page-0001.jpg",
         "logo_alt": "Agency logo",
         "has_nav": true,
         "nav_links": [
