config.json: updated logo_alt in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
     "header": {
         "title": "Agency",
         "logo": "images/TWINSIS_VINTAGE_card_90x50mm_1_page-0001.jpg",
-        "logo_alt": "Agency logo",
+        "logo_alt": "Shop",
         "has_nav": true,
         "nav_links": [
             {
