config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,5 +38,5 @@
             }
         ]
     },
-    "domain": "https://twinsis-269ae.netlify.app"
+    "domain": "https://twinsis--269ae.netlify.app"
 }
