--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,5 +38,12 @@
             }
         ]
     },
-    "domain": "https://twinsis-vintage-269ae.netlify.app"
+    "domain": "https://twinsis-vintage-269ae.netlify.app",
+    "header": {
+        "title": "lorem-ipsum",
+        "logo_alt": "lorem-ipsum",
+        "has_nav": true,
+        "nav_links": [],
+        "type": "header"
+    }
 }
