stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -404,6 +404,7 @@ models:
             - action
       - name: html
         type: html
+        label: timeline
     labelField: title
   content_section:
     type: object
