stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -436,6 +436,8 @@ models:
         description: The text content of the section
       - name: HTML
         type: html
+      - name: ''
+        type: string
     labelField: title
   cta_section:
     type: object
