--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -162,7 +162,7 @@ models:
         label: Sections
         description: Page sections
         items:
-          type: html
+          type: color
       - type: model
         name: seo
         models:
