stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -165,6 +165,7 @@ models:
           type: model
           models:
             - action
+            - cta_section
       - type: model
         name: seo
         models:
