stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -166,6 +166,7 @@ models:
           models:
             - action
             - cta_section
+            - text_section
       - type: model
         name: seo
         models:
