--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -177,7 +177,7 @@ models:
         models:
           - stackbit_page_meta
         label: Seo
-      - name: ''
+      - name: HTML_Video
         type: string
   blog:
     type: page
