config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,6 +28,22 @@
                 "style": "icon",
                 "icon": "dribbble",
                 "new_window": true
+            },
+            {
+                "label": "LinkedIn",
+                "url": "https://www.linkedin.com/",
+                "style": "icon",
+                "icon": "linkedin",
+                "new_window": true
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "icon": "dribbble",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ]
     },
